--- a/public/css/app.css
+++ b/public/css/app.css
@@ -492,8 +492,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-12 {
   margin-top: 3rem;
 }
-.ml-8 {
-  margin-left: 2rem;
+.mr-8 {
+  margin-right: 2rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
